fix itempreview name not showing

--- a/css/singlePageTemplate.css
+++ b/css/singlePageTemplate.css
@@ -38,7 +38,7 @@ hr{
 	margin-top:-30px;
 }
 .ItemPreviewName{
-	position:absolute;
+	
 	text-align: center;
 	margin-top: 1%;
 	font-size:30px;
